# paperclips

./: .gitmodules  Cargo.toml  README.md
src/: lib.rs  main.rs  setup.rs
src/core/: business.rs  cheat.rs  combat.rs  computational.rs  console.rs  end.rs  ending.rs  factory.rs  investments.rs  messages.rs  mod.rs  project.rs  qchips.rs  rng.rs  sounds.rs  space.rs  strategy.rs  threnody.rs  util.rs  wire.rs
src/core/combat/: battle_name.rs  ship.rs
src/core/strategy/: strategies.rs  util.rs
src/gui/: blink.rs  groups.rs  mod.rs  secrets.rs  threnody.rs
src/gui/groups/: combat.rs  strategy.rs
src/paperclips_core/: business.rs  computational.rs  investments.rs  messages.rs  mod.rs  project.rs  projects.rs  qchips.rs  strategy.rs  util.rs  wire.rs
src/paperclips_core/strategy/: strategies.rs  util.rs
