[package]
name = "paperclips"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
eframe = "0.33.0"
egui_extras = "0.33.0"
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }

[profile.release]
# opt-level = "z" # 5245kB -> 4368kB
opt-level = "s" # 5245kB -> 4586kB, keeping this for preferred speed
lto = true # 4586kB -> 4085kB
panic = "abort" # 4085kB -> 3417kB
codegen-units = 1 # 3417kB -> 3388kB, probably not worth it
