[package]
name = "paperclips"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
eframe = "0.34.3"
egui_extras = "0.34.3"
kittyaudio = "0.2.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }

[profile.release]
# opt-level = "z" # 5245kB -> 4368kB
opt-level = "s" # 5245kB -> 4586kB, keeping this for preferred speed
lto = true # 4586kB -> 4085kB
panic = "abort" # 4085kB -> 3417kB
codegen-units = 1 # 3417kB -> 3388kB, probably not worth it
